# Enphysion

./: .gitignore  README.md  pyproject.toml
src/: .gitignore
src/data/: MEMBERS_RESPONSE.json  sandeep_ramesh_calendar.html
src/enphysion/: fetch_data.ipynb  get_members.ipynb  recent_activitiy_table.ipynb  recent_activity_v2.ipynb  users.pkl
src/enphysion/data_structures/: user.py
src/enphysion/final_outputs/2024_01_07/: Joshua Kaplan_20240107213543.csv  Kate O'Sullivan_20240107213543.csv
src/enphysion/final_outputs/2024_01_07_old/: 2024-01-07 17:36:54.334501.csv  2024-01-07 19:51:06.581637.csv  2024-01-07 20:44:07.793149.csv
src/enphysion/final_outputs/2024_01_13/: Joshua Kaplan_20240113182952.csv  Kate O'Sullivan_20240113182952.csv  Rachel Barg_20240113182952.csv
src/enphysion/final_outputs/2024_01_21/: Joshua Kaplan_20240121152752.csv  Kate O'Sullivan_20240121152752.csv  Rachel Barg_20240121152752.csv
src/enphysion/final_outputs/2024_01_27/: Joshua Kaplan_20240127210059.csv  Kate O'Sullivan_20240127210059.csv  Rachel Barg_20240127210059.csv
src/enphysion/final_outputs/2024_02_04/: Joshua Kaplan_20240204190059.csv  Kate O'Sullivan_20240204190059.csv
src/enphysion/final_outputs/2024_02_12/: Joshua Kaplan_20240212222136.csv  Kate O'Sullivan_20240212222136.csv
src/enphysion/final_outputs/2024_02_18/: Joshua Kaplan_20240218154616.csv  Kate O'Sullivan_20240218154616.csv
src/enphysion/final_outputs/2024_02_24/: Joshua Kaplan_20240224145343.csv  Kate O'Sullivan_20240224145343.csv
src/enphysion/final_outputs/2024_03_02/: Joshua Kaplan_20240302183922.csv  (+1 more)
(+31 files in other folders)
