[tool.poetry]
name = "enphysion"
version = "0.1.0"
description = ""
authors = ["Sandeep Ramesh <cfcsandeep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.5"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
